# parrillada

./: AUTHORS  AUTHORS.md  COPYING  ChangeLog  LICENSE.md  MAINTAINERS.md  Makefile.am  NEWS  NEWS.md  README  README.md  aclocal.m4  autogen.sh  config.h.in  configure.ac  configure.in  libparrillada-burn.pc.in  libparrillada-burn3.pc.in  libparrillada-media.pc.in  libparrillada-media3.pc.in  mate-doc-utils.make
caja/: Makefile.am  caja-burn-bar.c  caja-burn-bar.h  caja-burn-extension.c  parrillada-caja.desktop.in  parrillada-caja.desktop.in.in
help/: ChangeLog  Makefile.am
help/C/: create-cover.page  index.docbook  index.page  introduction.page  parrillada.xml  project-audio.page  project-image-burn.page  project-save.page  project-video.page  split-track.page  tools-check-integrity.page
help/bg/: bg.po  create-cover.page  index.docbook  index.page  introduction.page  parrillada.xml  project-audio.page  project-image-burn.page  project-save.page  project-video.page  split-track.page  tools-check-integrity.page
help/ca/: ca.po  create-cover.page  index.docbook  index.page  introduction.page  parrillada.xml  project-audio.page  project-image-burn.page  project-save.page  project-video.page  split-track.page  tools-check-integrity.page
help/cs/: create-cover.page  cs.po  index.docbook  index.page  introduction.page  parrillada.xml  project-audio.page  project-image-burn.page  project-save.page  project-video.page  split-track.page  tools-check-integrity.page
help/de/: create-cover.page  de.po  index.docbook  index.page  introduction.page  parrillada.xml  project-audio.page  project-image-burn.page  project-save.page  project-video.page  split-track.page  tools-check-integrity.page
help/el/: create-cover.page  el.po  index.docbook  index.page  introduction.page  parrillada.xml  project-audio.page  project-image-burn.page  project-save.page  project-video.page  split-track.page  tools-check-integrity.page
help/en_GB/: create-cover.page  en_GB.po  index.docbook  index.page  introduction.page  parrillada.xml  project-audio.page  project-image-burn.page  project-save.page  project-video.page  split-track.page  tools-check-integrity.page
help/es/: create-cover.page  es.po  index.docbook  index.page  introduction.page  parrillada.xml  project-audio.page  project-image-burn.page  project-save.page  project-video.page  split-track.page  tools-check-integrity.page
help/eu/: create-cover.page  eu.po  index.page  introduction.page  project-audio.page  project-image-burn.page  project-save.page  project-video.page  split-track.page  tools-check-integrity.page
help/fi/: create-cover.page  fi.po  index.docbook  index.page  introduction.page  parrillada.xml  project-audio.page  project-image-burn.page  project-save.page  project-video.page  (+2 more)
libparrillada-burn/: Makefile.am  burn-basics.c  burn-basics.h  burn-caps.c  burn-caps.h  burn-dbus.c  burn-dbus.h  burn-debug.c  burn-debug.h  burn-image-format.c  burn-image-format.h  burn-job.c  burn-job.h  burn-mkisofs-base.c  burn-mkisofs-base.h  burn-plugin-manager.c  burn-plugin-manager.h  burn-plugin.c  burn-process.c  burn-process.h  burn-task-ctx.c  burn-task-ctx.h  burn-task-item.c  burn-task-item.h  burn-task.c  burn-task.h  libparrillada-marshal.c  libparrillada-marshal.h  parrillada-blank-dialog.c  parrillada-blank-dialog.h  parrillada-burn-dialog.c  parrillada-burn-dialog.h  parrillada-burn-lib.h  parrillada-burn-lib.h.in  parrillada-burn-options.c  parrillada-burn-options.h  parrillada-burn.c  parrillada-burn.h  parrillada-caps-burn.c  parrillada-caps-burn.h  (+82 more)
libparrillada-media/: COPYING  Makefile.am  burn-iso-field.c  burn-iso-field.h  burn-iso9660.c  burn-iso9660.h  burn-susp.c  burn-susp.h  burn-volume-source.c  burn-volume-source.h  burn-volume.c  burn-volume.h  libparrillada-marshal.c  libparrillada-marshal.h  parrillada-drive-priv.h  parrillada-drive-selection.c  parrillada-drive-selection.h  parrillada-drive.c  parrillada-drive.h  parrillada-gio-operation.c  parrillada-gio-operation.h  parrillada-media-private.h  parrillada-media.c  parrillada-media.h  parrillada-media.h.in  parrillada-medium-monitor.c  parrillada-medium-monitor.h  parrillada-medium-selection-priv.h  parrillada-medium-selection.c  parrillada-medium-selection.h  parrillada-medium.c  parrillada-medium.h  parrillada-units.c  parrillada-units.h  parrillada-volume.c  parrillada-volume.h  scsi-base.h  scsi-cam.c  scsi-command.h  scsi-device.h  (+46 more)
libparrillada-utils/: Makefile.am  parrillada-async-task-manager.c  parrillada-async-task-manager.h  parrillada-disc-message.c  parrillada-disc-message.h  parrillada-io.c  parrillada-io.h  parrillada-jacket-background.c  parrillada-jacket-background.h  parrillada-jacket-buffer.c  parrillada-jacket-buffer.h  parrillada-jacket-edit.c  parrillada-jacket-edit.h  parrillada-jacket-font.c  parrillada-jacket-font.h  parrillada-jacket-view.c  parrillada-jacket-view.h  parrillada-metadata.c  parrillada-metadata.h  parrillada-misc.c  parrillada-misc.h  parrillada-notify.c  parrillada-notify.h  parrillada-pk.c  parrillada-pk.h  parrillada-tool-color-picker.c  parrillada-tool-color-picker.h
src/: Makefile.am  eggsmclient-xsmp.c  main.c  parrillada-app.c  parrillada-app.h  parrillada-audio-disc.c  parrillada-audio-disc.h  parrillada-cli.c  parrillada-cli.h  parrillada-data-disc.c  parrillada-data-disc.h  parrillada-disc.c  parrillada-disc.h  parrillada-drive-settings.c  parrillada-drive-settings.h  parrillada-eject-dialog.c  parrillada-eject-dialog.h  parrillada-file-chooser.c  parrillada-file-chooser.h  parrillada-file-filtered.c  parrillada-file-filtered.h  parrillada-filter-option.c  parrillada-filter-option.h  parrillada-layout-object.c  parrillada-layout-object.h  parrillada-layout.c  parrillada-layout.h  parrillada-marshal.c  parrillada-marshal.h  parrillada-mime-filter.c  parrillada-mime-filter.h  parrillada-multi-dnd.c  parrillada-multi-dnd.h  parrillada-multi-song-props.c  parrillada-multi-song-props.h  parrillada-player-bacon.c  parrillada-player-bacon.h  parrillada-player.c  parrillada-player.h  parrillada-playlist.c  (+51 more)
(+442 files in other folders)
