@YELP_HELP_RULES@

# Module name
HELP_ID = parrillada

# Legal entity include
HELP_FILES = index.docbook legal.xml

# Othe includes
DOC_INCLUDES = 

# List of figures to be included
HELP_MEDIA = figures/parrillada_main.png 

# List of translations
HELP_LINGUAS = bg ca cs de el en_GB es fi fr gl it pl ru sl sv zh_CN zh_HK zh_TW

-include $(top_srcdir)/git.mk
